--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>cafeapp</title>
+    <!--Tailwind css-->
+    <link href="/dist/styles.css" rel="stylesheet">
+    <!--Font awesome icons-->
+    <script src="https://kit.fontawesome.com/5d55c910df.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
